
helpdir=$(datadir)/poedit/help
poedithelpdir=$(helpdir)/en
gettexthelpdir=$(helpdir)/en/gettext

poedithelp_DATA =    poedit.hhc \
                     poedit.hhp \
					 basics.html \
					 index.html \
					 manager.html \
					 menu.html \
                     settings.html \
	 				 tm.html \
	 				 ui.html \
					 update.html

gettexthelp_DATA = \
				   	gettext/gettext.hhc \
					gettext/gettext.hhp \
					gettext/gettext_10.html \
					gettext/gettext_11.html \
					gettext/gettext_12.html \
					gettext/gettext_1.html \
					gettext/gettext_2.html \
					gettext/gettext_3.html \
					gettext/gettext_4.html \
					gettext/gettext_5.html \
					gettext/gettext_6.html \
					gettext/gettext_7.html \
					gettext/gettext_8.html \
					gettext/gettext_9.html \
					gettext/gettext_foot.html \
					gettext/gettext_toc.html \
					gettext/index.html
