
iconsdir=$(datadir)/icons/hicolor
icons16dir=$(iconsdir)/16x16/apps
icons32dir=$(iconsdir)/32x32/apps
icons48dir=$(iconsdir)/48x48/apps
iconsscalabledir=$(iconsdir)/scalable/apps
pixmapsdir=$(datadir)/pixmaps
poediticonsdir=$(datadir)/poedit/icons

icons16_DATA = appicon/16x16/poedit.png
icons32_DATA = appicon/32x32/poedit.png
icons48_DATA = appicon/48x48/poedit.png
pixmaps_DATA = appicon/48x48/poedit.png
iconsscalable_DATA = appicon/poedit.svg


poediticons_DATA = \
	    README \
		document-open.png \
		document-save.png \
		help-browser.png \
		poedit-comment.png \
		poedit-fuzzy.png \
		edit-delete.png \
		document-properties.png \
		document-new.png \
		poedit-status-automatic.png \
		poedit-status-cat-mid.png \
		poedit-status-cat-no.png \
		poedit-status-cat-ok.png \
		poedit-status-comment-modif.png \
		poedit-status-comment.png \
		poedit-status-modified.png \
		poedit-status-nothing.png \
		poedit-update.png \
		window-close.png
